Fixed header overflow

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@ body {
 .App-header {
   padding-left: 1em;
   background-color: #222;
-  width: 100%;
   display: flex;
   flex-direction: column;
   color: white;
